--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:e2e": "jest --config ./e2e/jest-e2e.json"
   },
   "dependencies": {
+    "@nest-modules/mailer": "^1.3.22",
     "@nestjs/common": "9.3.12",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "9.3.12",
     "@nestjs/platform-express": "9.3.12",
     "@nestjs/platform-socket.io": "9.3.12",
@@ -28,7 +30,9 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "dotenv": "^16.0.3",
+    "hbs": "^4.2.0",
     "kafkajs": "^2.2.4",
+    "nodemailer": "^6.9.1",
     "reflect-metadata": "0.1.13",
     "rimraf": "4.4.1",
     "rxjs": "^7.5.5",
